#58: packaging for console-server
- include plugins, database, jetty config